<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".module.mine.BindAccountActivity">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/profile_bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px_36"
            android:layout_marginTop="@dimen/px_40"
            android:background="@drawable/profile_content_bg"
            android:orientation="vertical"
            android:paddingLeft="@dimen/sp_30"
            android:paddingTop="@dimen/px_50"
            android:paddingRight="@dimen/sp_30"
            android:paddingBottom="@dimen/px_72">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bind_account_phone"
                    android:textSize="@dimen/sp_30" />

                <TextView
                    android:id="@+id/tv_phone_state_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_phone_title"
                    android:text="@string/bind_no_binded"
                    android:textColor="@color/gray_textColor"
                    android:textSize="@dimen/sp_30" />

                <EditText
                    android:id="@+id/et_bind_account_phoneNO"
                    android:layout_width="@dimen/px_340"
                    android:layout_height="@dimen/px_90"
                    android:layout_below="@id/tv_phone_title"
                    android:layout_marginTop="@dimen/px_24"
                    android:background="@drawable/profile_edittext_bg_selector"
                    android:gravity="center_vertical"
                    android:hint="@string/bind_account_hint_phone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/px_30"
                    android:textSize="@dimen/sp_30" />

                <com.jmtad.jftt.customui.CountDownTextView
                    android:id="@+id/bt_send_verifyCode"
                    android:layout_width="@dimen/px_240"
                    android:layout_height="@dimen/px_90"
                    android:layout_alignTop="@id/et_bind_account_phoneNO"
                    android:layout_marginLeft="@dimen/px_30"
                    android:layout_toRightOf="@id/et_bind_account_phoneNO"
                    android:background="@drawable/bt_login_bind_send_bg"
                    android:gravity="center"
                    android:text="@string/register_send_verification_code"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/sp_30" />

                <EditText
                    android:id="@+id/et_bind_account_verCode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_90"
                    android:layout_below="@id/et_bind_account_phoneNO"
                    android:layout_marginTop="@dimen/px_32"
                    android:background="@drawable/profile_edittext_bg_selector"
                    android:gravity="center_vertical"
                    android:hint="@string/bind_account_hint_verCode"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/px_30"
                    android:textSize="@dimen/sp_30" />

                <Button
                    android:id="@+id/bt_bind_account_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_90"
                    android:layout_below="@id/et_bind_account_phoneNO"
                    android:layout_marginTop="@dimen/px_32"
                    android:background="@drawable/profile_edittext_bg_normal"
                    android:gravity="center"
                    android:paddingLeft="@dimen/px_30"
                    android:textColor="@color/gray_textColor"
                    android:textSize="@dimen/sp_30"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_wechat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px_60"
                    android:text="@string/bind_account_wechat"
                    android:textSize="@dimen/sp_30" />

                <TextView
                    android:id="@+id/tv_wechat_state_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tv_wechat_title"
                    android:layout_toRightOf="@id/tv_wechat_title"
                    android:text="@string/bind_no_binded"
                    android:textColor="@color/gray_textColor"
                    android:textSize="@dimen/sp_30" />

                <Button
                    android:id="@+id/bt_bind_account_wechat"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_90"
                    android:layout_below="@id/tv_wechat_title"
                    android:layout_marginTop="@dimen/px_24"
                    android:background="@drawable/profile_radio_bt_bg_normal"
                    android:text="@string/bind_account_go_bind_wechat"
                    android:textColor="@color/gray_textColor" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_bind_account_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_90"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginTop="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:background="@drawable/bt_choose_login_bg"
            android:text="@string/profile_submit"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/black_textColor"
            android:textSize="@dimen/sp_30" />
    </LinearLayout>
</LinearLayout>